tests/samples/negative/types/bcast_int_to_ptr.ax
module bcast_int_to_ptr;

fn main() -> i32 {
  let address: usize = ((0) as usize);
  let pointer: *const i32 = bitcast<*const i32>(address);
  if pointer == null {
    return 0;
  }
  return 1;
}
